Réorganisation Création des leçons Corrections Optimisations Découpage des codes

--- a/lessons.html
+++ b/lessons.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     
     <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="./css/glitch.css"/>
     <link rel="stylesheet" href="./css/header_footer.css"/>
     <link rel="stylesheet" href="./css/lessons.css"/>
 
@@ -41,7 +40,7 @@
         <section class="lesson-category-section">
             <h2 class="main-title category-title">Web Hacking</h2>
             <div class="box_container">
-                <a href="#" class="lesson-card" data-lesson-id="web-sql">
+                <a href="lessons/web-sql-easy/web-sql-easy.html" class="lesson-card" data-lesson-id="web-sql-easy">
                     <i class="fas fa-globe card-icon"></i>
                     <div class="lesson-text-content">
                         <div class="lesson-title-wrapper">
@@ -162,7 +161,7 @@
     </div>
 
     <script src="js/lessons.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script src="js/header.js" defer></script>
 
 </body>
 </html>
