--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="leçons scénarios et défis de cybersécurité">
-    <meta name="keywords" content="Leçons, scénarios, défis, Krhacken, cyber, esisar">
+    <meta name="description" content="Rejoignez la Kr[HACK]ademy pour apprendre la cybersécurité avec des leçons, challenges et scénarios, créés par le club Krhacken de l'Esisar.">
+    <meta name="keywords" content="cybersécurité, apprendre, hacking éthique, leçons, challenges, scénarios, Krhacken, Esisar">
     <meta name="author" content="BRUCHON Hugo">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Kr[HACK]ademy</title>
+    <title>Kr[HACK]ademy - Apprenez la cybersécurité en ligne</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/glitch.css"/>
     <link rel="stylesheet" href="./css/header_footer.css"/>
@@ -19,76 +22,79 @@
     <link rel="icon" type="image/png" href="./images/logo_krhacken_r.ico" />
 
     <link rel="preload" as="image" href="./images/header_background_blured3.webp" type="image/webp" fetchpriority="high">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
 
     <header>
-        <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="logo_krhackademy" width="40" height="40"/></a>
+        <a href="./index.html"><img src="./images/logo_krhacken_invert2.webp" alt="Logo Krhackademy" width="40" height="40"/></a>
         <h1 class="title"> <a href="./index.html">Kr[HACK]ademy</a> </h1>
-        <nav class="nav_bar">
-            <ul>
+        <nav class="nav_bar" aria-label="Navigation principale">
+            <ul id="nav-links">
                 <li class="active"><a href="./index.html">ACCUEIL</a></li>
                 <li><a href="./lessons.html">LEÇONS</a></li>
                 <li><a href="./challenges.html">CHALLENGES</a></li>
                 <li><a href="./scenarios.html">SCÉNARIOS</a></li>
             </ul>
         </nav>
-        <div class="fas fa-bars"></div>
+        <button class="fas fa-bars" aria-label="Ouvrir le menu de navigation" aria-expanded="false" aria-controls="nav-links"></button>
     </header>
 
-    <div class="main">
+    <main class="main">
         
         <section class="intro">
             <div class="text_intro">
-                <h2 class="main-title">Apprends la cybersécurité <br><span id="dynamic-text" class="glitch" data-text="en ligne"></span></br></h2>
-                <h3 class="subtitle">Créé par le <i>Kr[HACK]en</i> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
+                <h2 class="main-title">Apprends la cybersécurité <span id="dynamic-text" class="glitch" data-text="en ligne">en ligne</span></h2>
+                <h3 class="subtitle">Créé par le <em>Kr[HACK]en</em> (club de cybersécurité de l'ESISAR) pour accompagner les étudiants dans leur apprentissage de débutant à expert</h3>
             </div>
             <div class="image_intro">
-                <img src="./images/krhacken_laurier.webp" alt="logo_krhackademy_laurier"/>
+                <img src="./images/krhacken_laurier.webp" alt="Logo du club Krhacken avec des lauriers"/>
             </div>
         </section>
 
         <section class="pres">
             <div class="text_pres">
-                <h2 class="main-title">Apprendre <span class="hyphen">- </span>Pratiquer <span class="hyphen">- </span>Réussir</h2>
+                <h2 class="main-title">Apprendre <span class="hyphen">-</span> Pratiquer <span class="hyphen">-</span> Réussir</h2>
             </div>
             <div class="box_container">
-                <a href="./lessons.html">
+                <a href="./lessons.html" class="box_pres_link">
                     <div class="box_pres">
-                        <img src="./images/lessons.webp" alt="Icône Leçons"/>
+                        <img src="./images/lessons.webp" alt="Icône représentant un livre ouvert pour la section Leçons."/>
                         <div class="box_info">
                             <h4>Leçons</h4>
                             <p>Découvrez les bases fondamentales et maîtrisez les concepts clés de la cybersécurité avec une approche structurée et complète.</p>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Théorie Solide</p></div>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Apprentissage Progressif</p></div>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Ressources Claires</p></div>
+                            <ul>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Théorie Solide</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Apprentissage Progressif</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Ressources Claires</li>
+                            </ul>
                         </div>
                     </div>
                 </a>
-                <a href="./challenges.html">
+                <a href="./challenges.html" class="box_pres_link">
                     <div class="box_pres">
-                        <img src="./images/challenges.webp" alt="Icône Défis"/>
+                        <img src="./images/challenges.webp" alt="Icône représentant un bouclier pour la section Challenges."/>
                         <div class="box_info">
                             <h4>Challenges</h4>
                             <p>Affrontez des défis concrets pour aiguiser vos compétences pratiques et développer vos compétences en cybersécurité.</p>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Mise en pratique</p></div>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Scénarios Réels</p></div>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Compétition Amicale</p></div>
+                            <ul>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Mise en pratique</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Scénarios Réels</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Compétition Amicale</li>
+                            </ul>
                         </div>
                     </div>
                 </a>
-                <a href="./scenarios.html">
+                <a href="./scenarios.html" class="box_pres_link">
                     <div class="box_pres">
-                        <img src="./images/scenarios.webp" alt="Icône Scénarios"/>
+                        <img src="./images/scenarios.webp" alt="Icône représentant un cheminement pour la section Scénarios."/>
                         <div class="box_info">
                             <h4>Scénarios</h4>
-                            <p>Validez vos aptitudes pratiques et vos acquis théoriques en suivant nos scénarios guidés pour completer votre profil</p>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Cyber-attaques guidées</p></div>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Découverte d'outils puissants</p></div>
-                            <div class="check_box"><i class="far fa-check-square checkbox-icon"></i><p>Guidés et réalistes</p></div>
+                            <p>Validez vos aptitudes pratiques et vos acquis théoriques en suivant nos scénarios guidés pour completer votre profil.</p>
+                            <ul>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Cyber-attaques guidées</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Découverte d'outils puissants</li>
+                                <li><i class="far fa-check-square checkbox-icon" aria-hidden="true"></i>Guidés et réalistes</li>
+                            </ul>
                         </div>
                     </div>
                 </a>
@@ -100,7 +106,7 @@
                 <h2 class="main-title">Nouveautés et Évènements</h2>
                 <a href="#" class="news-card event">
                     <div class="card-image-container">
-                        <img src="./images/tmp4.jpg" alt="Évènement Session 0" onerror="this.style.display='none';">
+                        <img src="./images/tmp4.jpg" alt="Affiche de l'évènement Session 0" onerror="this.style.display='none';">
                         <div class="card-overlay">
                             <div>
                                 <div class="card-title">Session 0</div>
@@ -113,7 +119,7 @@
             <div class="news-grid">
                 <a href="#" class="news-card">
                     <div class="card-image-container">
-                        <img src="./images/tmp1.png" alt="Nouveauté Cyber-attaques" onerror="this.style.display='none';">
+                        <img src="./images/tmp1.png" alt="Nouveauté sur les Cyber-attaques" onerror="this.style.display='none';">
                         <div class="card-overlay">
                             <div>
                                 <div class="card-title">Cyber-attaques</div>
@@ -124,7 +130,7 @@
                 </a>
                 <a href="#" class="news-card">
                     <div class="card-image-container">
-                        <img src="./images/tmp2.png" alt="Nouveauté Forensics" onerror="this.style.display='none';">
+                        <img src="./images/tmp2.png" alt="Nouveauté sur le Forensics" onerror="this.style.display='none';">
                         <div class="card-overlay">
                             <div>
                                 <div class="card-title">Forensics</div>
@@ -135,9 +141,9 @@
                 </a>
                 <a href="#" class="news-card">
                     <div class="card-image-container">
-                        <img src="./images/tmp3.png" alt="Nouveauté Sécurité Web" onerror="this.style.display='none';">
+                        <img src="./images/tmp3.png" alt="Nouveauté sur la Sécurité Web" onerror="this.style.display='none';">
                         <div class="card-overlay">
-                           <div>
+                            <div>
                                 <div class="card-title">Sécurité Web</div>
                                 <div class="card-subtitle">Construisez une application web sécurisée de A à Z.</div>
                             </div>
@@ -146,12 +152,15 @@
                 </a>
             </div>
         </section>
-    </div>
+    </main>
 
     <footer>
-        <a href="https://krhacken.org" target="_blank"> <img src="images/logo.webp" alt="krhacken cybersecurity & ethical hacking"> </a>
-        <a href="https://esisar.grenoble-inp.fr" target="_blank"> <img src="images/logo_esisar.webp" alt="Grenoble-INP Esisar"> </a>
-        <h5>L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>EMAIL : <a href="mailto:contact@krhacken.org">contact<i class="far fa-at"></i>krhacken.org</a>
+        <a href="https://krhacken.org" target="_blank" rel="noopener noreferrer"> <img src="images/logo.webp" alt="Logo du club Krhacken"> </a>
+        <a href="https://esisar.grenoble-inp.fr" target="_blank" rel="noopener noreferrer"> <img src="images/logo_esisar.webp" alt="Logo de Grenoble-INP Esisar"> </a>
+        <p class="footer-legal">
+            L'ENSEMBLE DE CE SITE RELÈVE DE LA LÉGISLATION FRANÇAISE ET INTERNATIONALE SUR LE DROIT D'AUTEUR ET LA PROPRIÉTÉ INTELLECTUELLE. TOUS LES DROITS DE REPRODUCTION SONT RÉSERVÉS, Y COMPRIS POUR LES DOCUMENTS TÉLÉCHARGEABLES ET LES REPRÉSENTATIONS ICONOGRAPHIQUES ET PHOTOGRAPHIQUES. LA REPRODUCTION DE TOUT OU PARTIE DE CE SITE SUR UN SUPPORT ÉLECTRONIQUE QUEL QU'IL SOIT EST FORMELLEMENT INTERDITE SAUF AUTORISATION EXPRESSE DU DIRECTEUR DE LA PUBLICATION. CE SITE EST ÉDITÉ PAR Le club kr[HACK]en, Grenoble INP Esisar, 50 Rue Barthélémy de Laffemas, 26000 Valence, France.<br>
+            EMAIL : <a href="mailto:contact@krhacken.org">contact@krhacken.org</a>
+        </p>
     </footer>
 
     <script src="js/index.js" defer></script>
